--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-torch
-torchvision
-pillow
-opencv-python
-numpy 
+fastapi==0.115.12
+uvicorn==0.34.3
+torch==2.2.2
+torchvision==0.17.2
+pillow==11.2.1
+opencv-python==4.11.0.86
+numpy==1.26.4
