--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.115.12
 uvicorn==0.34.3
-torch==2.2.2
-torchvision==0.17.2
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
 pillow==11.2.1
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 numpy==1.26.4
+
+--extra-index-url https://download.pytorch.org/whl/cpu
