--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ torchvision==0.17.2+cpu
 pillow==11.2.1
 opencv-python-headless==4.11.0.86
 numpy==1.26.4
+python-multipart
 
 --extra-index-url https://download.pytorch.org/whl/cpu
